time as preferances
